--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,17 +6,28 @@
 
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 5px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 15px;
+    text-decoration: none;
 }
 
 h1 {
     color: steelblue;
+    border-bottom: 3px solid #000;
+    line-height: 2em;
+}
+
+main {
+    grid-column: 2/3;
+
 }
 
 main img {
@@ -33,14 +44,11 @@ p {
     padding: 0;
 }
 
-main {
-    max-width: 840px;
-}
-
 aside {
     width: 20em;
-    text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
@@ -57,8 +65,15 @@ aside h2 {
 
 footer {
     margin-top: 10rem;
-    border-top: 2px solid rgba(0, 0, 0, 3);
+    border-top: 2px solid rgba(0, 0, 0, 0.3);
     text-align: center;
+}
+
+header,
+.grid,
+footer {
+    max-width: 840px;
+    margin: 0 auto;
 }
 
 
@@ -66,10 +81,15 @@ footer {
 
 .box {
     margin: 1rem;
-    border: 1px solid rgba(24, 29, 10, 3);
+    border: 1px solid rgba(24, 29, 10, 0.3);
     padding: 1rem;
     background-color: #bbd3e6;
     color: #181d0a;
 }
 
 /*https://coolors.co/709fcd-181d0a-bbd3e6-6889ad-94bfe1*/
+
+.grid {
+    display: grid;
+    align-items: center;
+}
