--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -34,8 +34,7 @@
 
 nav {
     background-color: var(--nav-background-color);
-    text-align: right;
-    padding: 10px 30px; 
+    padding: 12px 40px; 
     border-top: 0.31em solid var(--accent1-color);
     border-bottom: 0.15em solid var(--accent2-color);
 }
@@ -45,7 +44,7 @@ nav a {
     color: var(--nav-link-color);
     text-decoration: none;
     text-transform: uppercase;
-    padding: 11px;
+    padding: 16px;
 }
 
 nav a:hover {
@@ -81,6 +80,7 @@ h2 {
     text-transform: uppercase;
     letter-spacing: 0.04em;
     line-height: 2.4em;
+    text-align: center;
     color: var(--accent2-color);
 }
 
@@ -98,17 +98,30 @@ footer img {
     margin: 10px;
 }
 
+header,
+main,
+footer {
+    display: grid;
+    align-items: center;
+}
+
 /* Class selectors */
 .header {
     background-color: var(--secondary-color);
+    grid-template-columns: 1fr 2fr;
 }
 
 .header img {
     background-color: var(--secondary-color);
     padding: 2px 10px 0;
     width: 200px;
+    justify-self: flex-end;
 }
 
+.navlinks {
+    padding: 15px;
+    justify-self: center;
+}
 .herodiv {
     max-width: 1280px;
     background-color: var(--secondary-color);
@@ -168,6 +181,7 @@ footer img {
 
 .hero-section {
     margin: 50px 100px 15px;
+    display: grid;
 }
 
 .hero-section img {
@@ -175,3 +189,83 @@ footer img {
     height: auto;
     margin: 0 0 20px;
 }
+
+.history-grid {
+    display: grid;
+    gap: 45px;
+}
+
+.history-grid img {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.history-p1 {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.history-p2 {
+    grid-column: 3;
+    grid-row: 1;
+}
+
+.gallery-h2 {
+    padding-top: 10px;
+    border-top: 0.2em solid var(--accent1-color);
+}
+.about-gallery {
+    display: grid;
+    grid-template-columns: repeat(5, minmax(0,1fr));
+    gap: 45px;
+    margin-bottom: 50px;
+}
+.about-gallery figure {
+    display: flex;
+    flex-flow: column;
+    max-width: 220px;
+    margin: auto;
+  }
+  
+  .about-gallery img {
+    max-width: 220px;
+    max-height: 150px;
+  }
+  
+  .about-gallery figcaption {
+    color: var(--primary-color);
+    font-size: 0.9em;
+    text-align: center;
+    line-height: 0.5em;
+  }
+
+.footer {
+    background-color: var(--primary-color);
+    border-top: 0.7em solid var(--accent1-color);
+    border-bottom: 0.4em solid var(--accent2-color);
+}
+
+  .footer p {
+    background-color: none;
+    color: var(--secondary-color);
+    padding: 20px;
+    grid-column: 1/4;
+    grid-row: 1/1;
+    justify-self: center;
+    z-index: 0;
+  }
+
+  .footer-links {
+    grid-column: 3/4;
+    grid-row: 1/1;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0; 
+    padding-right: 65px;
+    border: none;
+  }
+
+  .footer-links img {
+    width: 50px;
+    height: auto;
+  }
