--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -371,9 +371,9 @@ footer {
 
 .address {
 
-    border: 8px solid var(--accent2-color);
+    border-top: 10px solid var(--accent2-color);
     top: 630px;
-    height: 120px;
+    height: 1px;
     text-align: center;
 }
 
@@ -383,7 +383,6 @@ footer {
     font-size: 1.5em;
     letter-spacing: -0.01em;
     line-height: 1.5em;
-    padding-top: 0px;
     margin-top: 0.3em;
     }
     
@@ -497,6 +496,15 @@ footer {
     height: auto;
 }
 
+.footer a {
+    color: var(--accent1-color);
+    display: flex;
+    grid-row: 2/2;
+    grid-column: 1/4;
+    justify-content: center;
+    text-decoration: none;
+    margin-bottom: 15px;
+}
 #contact-numbers {
     background-color: var(--accent2-color);
     width: 1280px;
